# categories

./: Cargo.toml  README.md
.github/workflows/: rust.yaml
src/: categories.rs  lib.rs  morphism.rs  object.rs
